--- a/ext/cfx-ui/src/app/servers/components/server-filter.component.scss
+++ b/ext/cfx-ui/src/app/servers/components/server-filter.component.scss
@@ -31,7 +31,7 @@ a {
 				.checkbox {
 					label, button {
 						height: $filterHeight;
-						padding: $padding*2 $padding*$multiplier;
+						padding: ($filterHeight - ($fontSize * .8))/2 $padding*$multiplier;
 					}
 
 					button {
@@ -148,7 +148,7 @@ a {
 					width: 100%;
 
 					font-size: $fontSize*.8;
-					font-weight: 100;
+					font-weight: 400;
 					line-height: 1;
 
 					@include theme using ($theme) {
@@ -169,16 +169,16 @@ a {
 						content: '';
 						display: inline-block;
 
-						width: 1.4vh;
-						height: 1.4vh;
+						width: $fontSize*.8;
+						height: $fontSize*.8;
 						margin-right: $padding/2;
 
 						border-radius: 1px;
 
-						vertical-align: baseline;
+						vertical-align: top;
 						overflow: hidden;
 
-						font-size: 1.7vh;
+						font-size: $fontSize * .8;
 						line-height: 1;
 						text-align: center;
 
