--- a/ext/cfx-ui/src/app/servers/direct/direct-connect.components.scss
+++ b/ext/cfx-ui/src/app/servers/direct/direct-connect.components.scss
@@ -20,7 +20,7 @@
     
     @include appContent;
 
-    @include theme() using ($theme) {
+    @include themeHostWorkaround() using ($theme) {
         color: gtv($theme, textColour);
     };
 
@@ -32,7 +32,7 @@
         input {
             width: 100%;
 
-            @include theme() using ($theme) {
+            @include themeHostWorkaround() using ($theme) {
                 background-color: rgba(gtv($theme, bgColour), .4);
 
                 &:hover,
@@ -46,6 +46,24 @@
             };
         }
     }
+    
+    @include themeHostWorkaround() using ($theme) {
+        .history>ul>li {
+            background-color: rgba(gtv($theme, bgColour), .2);
+            
+            span.time {
+                color: darken(gtv($theme, textColour), 10%);
+            }
+            
+            &:hover {
+                background-color: rgba(lighten(gtv($theme, bgColour), 10%), .3);
+            }
+        }
+
+        .server-info>div {
+            background-color: rgba(gtv($theme, bgColour), .2);
+        }
+    };
 
     .history {
         &>ul {
@@ -54,10 +72,6 @@
             &>li {
                 margin-top: $padding;
                 padding: $padding $padding*$multiplier;
-
-                @include theme() using ($theme) {
-                    background-color: rgba(gtv($theme, bgColour), .2);
-                };
 
                 position: relative;
 
@@ -85,23 +99,11 @@
                     margin-right: 1vh;
                 }
 
-                span.time {
-                    @include theme() using ($theme) {
-                        color: darken(gtv($theme, textColour), 10%);
-                    };
-                }
-
                 span.players {
                     &:after {
                         content: '📶';
                         padding-left: 0.5vh;
                     }
-                }
-
-                &:hover {
-                    @include theme() using ($theme) {
-                        background-color: rgba(lighten(gtv($theme, bgColour), 10%), .3);
-                    };
                 }
             }
         }
@@ -111,10 +113,6 @@
         &>div {
             margin-top: $padding;
             padding: $padding $padding*$multiplier;
-
-            @include theme() using ($theme) {
-                background-color: rgba(gtv($theme, bgColour), .2);
-            };
 
             &.loading::after {
                 display: inline;
@@ -167,10 +165,6 @@
                     .key {
                         display: inline-block;
                         font-weight: 100;
-
-                        @include theme() using ($theme) {
-                            color: gtv($theme, textColour);
-                        };
 
                         width: 15%;
                     }
